--- a/AssortrockWINAPI/AssortrockWINAPI/AssortrockWINAPI.vcxproj.filters
+++ b/AssortrockWINAPI/AssortrockWINAPI/AssortrockWINAPI.vcxproj.filters
@@ -24,17 +24,23 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Assortrock_WINAPI_2018.h">
+    <ClInclude Include="AssortrockWINAPI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Assortrock_WINAPI_2018.cpp">
+    <ClCompile Include="AssortrockWINAPI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Assortrock_WINAPI_2018.rc">
+    <ResourceCompile Include="AssortrockWINAPI.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
@@ -42,7 +48,7 @@
     <Image Include="small.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="Assortrock_WINAPI_2018.ico">
+    <Image Include="AssortrockWINAPI.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
