--- a/APIFramework/APIFramework/include/APIFramework.vcxproj
+++ b/APIFramework/APIFramework/include/APIFramework.vcxproj
@@ -148,12 +148,14 @@
   <ItemGroup>
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Scene\SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Macro.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="types.h" />
   </ItemGroup>
   <ItemGroup>
