--- a/APIFramework/APIFramework/include/APIFramework.vcxproj
+++ b/APIFramework/APIFramework/include/APIFramework.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="Core\Timer.cpp" />
+    <ClCompile Include="Object\Minion.cpp" />
     <ClCompile Include="Object\MoveObject.cpp" />
     <ClCompile Include="Object\Player.cpp" />
     <ClCompile Include="Object\StaticObject.cpp" />
@@ -162,6 +163,7 @@
   <ItemGroup>
     <ClInclude Include="Core.h" />
     <ClInclude Include="Core\Timer.h" />
+    <ClInclude Include="Object\Minion.h" />
     <ClInclude Include="Object\MoveObject.h" />
     <ClInclude Include="Object\Player.h" />
     <ClInclude Include="Object\StaticObject.h" />
