--- a/APIFramework/APIFramework/include/APIFramework.vcxproj.filters
+++ b/APIFramework/APIFramework/include/APIFramework.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Object\Player.cpp">
       <Filter>03. Object</Filter>
     </ClCompile>
+    <ClCompile Include="Object\Minion.cpp">
+      <Filter>03. Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -114,6 +117,9 @@
       <Filter>03. Object</Filter>
     </ClInclude>
     <ClInclude Include="Object\Player.h">
+      <Filter>03. Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Minion.h">
       <Filter>03. Object</Filter>
     </ClInclude>
   </ItemGroup>
