--- a/APIFramework/APIFramework/include/APIFramework.vcxproj.filters
+++ b/APIFramework/APIFramework/include/APIFramework.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="04. Resources">
       <UniqueIdentifier>{0cd18c27-cd58-44d1-92c0-343c256e3d68}</UniqueIdentifier>
     </Filter>
+    <Filter Include="03. Object\02. StaticObject\01. Stage">
+      <UniqueIdentifier>{31a0ed09-f6d1-4447-b37e-0e387ce6356f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -101,6 +104,9 @@
     </ClCompile>
     <ClCompile Include="Resources\Texture.cpp">
       <Filter>04. Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\Stage.cpp">
+      <Filter>03. Object\02. StaticObject\01. Stage</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +172,9 @@
     </ClInclude>
     <ClInclude Include="Resources\Texture.h">
       <Filter>04. Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Stage.h">
+      <Filter>03. Object\02. StaticObject\01. Stage</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
